# observatorio-ciseb

./: .env.example  .gitattributes  .gitignore  Plano_Observatorio_CISEB_v2.md  README.md  USOINTERNOORQUESTRADOR&ARQUITET.md  package.json  vercel.json
.github/workflows/: ci.yml  cron-coleta.yml
apps/web/: instrumentation.ts  jest.config.js  middleware.ts  next.config.mjs  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts
apps/worker/: Dockerfile  pyproject.toml  render.yaml  ruff.toml
apps/worker/src/: api.py  main.py  sentry_init.py
apps/worker/src/collectors/: __init__.py  base.py  events.py  forums.py  github.py  scholar.py  web_rss.py  youtube.py
apps/worker/src/db/: queries.py  supabase.py
apps/worker/src/delivery/: telegram.py
apps/worker/src/llm/: classifier.py  deepseek.py  embeddings.py
apps/worker/src/utils/: __init__.py  hashing.py  text.py
apps/worker/tests/: test_classifier.py  test_embeddings.py  test_freshness_filters.py  test_hashing.py  test_verify_cron.py
memoria/: 0001-fase-5-seguranca-testes-auth-cron.patch  0001-fix-seguranca-critica-f4.patch  00_MANIFESTO_IA.md  01_DECISOES_TOMADAS.md  02_STACK_TECNOLOGICA.md  03_SCHEMA_BANCO.md  04_MAPA_FASES.md  05_SEGURANCA_DESDE_DESENHO.md  06_CONTRATOS_E_SCHEMAS.md  07_CONTEXTO_PEDAGOGICO.md  08_LOG_EXECUCAO.md  09_ESTRUTURA_ARQUIVOS.md  GUIA_SENTRY_SETUP.md  PLANO-EXECUCAO-FASE5.md  README-aplicacao-patch.md
plans/: fase1.2-migracoes-sql.md
supabase/migrations/: 001_init.sql  002_pgmq.sql  003_rls.sql  004_rls_auth.sql  seed.sql
(+12 files in other folders)
