[project]
name = "observatorio-worker"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
  "httpx==0.27.0",
  "supabase==2.5.0",
  "python-telegram-bot==21.4",
  "python-dotenv==1.0.1",
  "feedparser==6.0.11",
  "trafilatura==1.12.0",
  "sentence-transformers==3.0.1",
  "openai==1.35.0",
  "pydantic==2.7.4",
  "celery==5.4.0",
]

[project.optional-dependencies]
dev = ["pytest==8.2.2", "pytest-cov==5.0.0", "ruff==0.5.0"]
