[project]
name = "observatorio-worker"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
  "httpx==0.27.0",
  "supabase==2.5.0",
  "python-dotenv==1.0.1",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "feedparser==6.0.11",
  "trafilatura==1.12.0",
  "openai==1.35.0",
  "pydantic==2.7.4",
  "scholarly>=1.7.0",
  "sentry-sdk[fastapi]>=2.10.0",
]

[project.optional-dependencies]
dev = ["pytest==8.2.2", "pytest-cov==5.0.0", "ruff==0.5.0"]
